--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,5 +9,7 @@
     = javascript_include_tag 'application'
   %body
     %header
+      = render 'layouts/navigation'
     %main{:role => "main"}
+      = render 'layouts/messages'
       = yield
