--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -5,7 +5,7 @@
   #navbarSupportedContent.collapse.navbar-collapse
     %ul.navbar-nav.mr-auto
       %li.nav-item
-        = link_to "Devices", "#", class: "nav-link"
+        = link_to "Devices", devices_path, class: "nav-link"
       %li.nav-item
         = link_to "Admins", "#", class: "nav-link"
     %ul.nav.navbar-nav.navbar-right
