--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -8,7 +8,7 @@
         %li.nav-item
           = link_to "Devices", devices_path, class: "nav-link"
         %li.nav-item
-          = link_to "Admins", admins_path, class: "nav-link"
+          = link_to "Administrators", admins_path, class: "nav-link"
       %ul.nav.navbar-nav.navbar-right
         %li.mt20
           = link_to "Logout", destroy_admin_session_path, class: "nav-link", method: :delete
